Archive2/09/b10cede2baf19d/output
main.cpp:16:20: error: constexpr variable 's' must be initialized by a constant expression
    constexpr auto s = c1(0);
                   ^   ~~~~~
main.cpp:10:14: note: subexpression not valid in a constant expression
    return x = n;
             ^
main.cpp:16:24: note: in call to 'c1(0)'
    constexpr auto s = c1(0);
                       ^
1 error generated.
